# kivymd_testDialog

./: .gitignore  README.md  app.py  buildozer.spec  pyproject.toml  txt.json
docs/: nores.txt  req.txt
templates/: base.kv
